# kickbase-analyzer

./: .env.example  .gitignore  Makefile  docker-compose.yml  flyway.conf  pyproject.toml  readme.md  requirements-ml.txt  requirements.txt
.github/workflows/: ci.yml
bigquery/: __init__.py
bigquery/core_transform/: __init__.py  apply_history_views_with_bq_cli.py  apply_ml_views_with_bq_cli.py  apply_views_with_bq_cli.py
bigquery/marts/: __init__.py  build_marts_local.py
bigquery/raw_load/: __init__.py  load_history_with_bq_cli.py  load_ml_with_bq_cli.py  load_raw_with_bq_cli.py  prepare_history_exports.py  prepare_ml_exports.py  prepare_raw_exports.py
bigquery/sql/: core_history_views.sql  core_ml_views.sql  core_views.sql  marts_history_views.sql  marts_ml_views.sql  marts_views.sql
dashboards/powerbi/: README.md
databricks/: __init__.py
databricks/jobs/: __init__.py  common_io.py
demo/data/: kickbase_match_stats.json  kickbase_player_snapshot.json  ligainsider_status_snapshot.json
docs/: architecture.md  compliance.md  data_contract.md  external_tools.md  ml_workflow.md  setup_databricks_bigquery.md  setup_postgres_history.md  setup_powerbi_api.md  setup_powerbi_desktop.md  setup_sources_private.md  start_plan.md
in/: orban.csv  players.example.csv  players_5.csv
local_ingestion/: __init__.py
local_ingestion/core/: __init__.py  bronze_writer.py  cache.py  config.py  kickbase_bronze_builder.py  ligainsider_bronze_builder.py  odds_bronze_builder.py  private_ingestion.py
local_ingestion/kickbase_client/: __init__.py  client.py
local_ingestion/ligainsider_scraper/: __init__.py  scraper.py
local_ingestion/odds_client/: __init__.py  client.py
local_ingestion/runners/: __init__.py  run_demo_ingestion.py  run_ingestion.py  run_scheduler.py
scripts/: __init__.py  check_external_tools.sh  lint.sh  run_backtesting.sh  run_build_marts_local.sh  run_databricks_jobs_demo.sh  run_demo_ingestion.sh  run_flyway_migrate.ps1  run_flyway_migrate.sh  run_history_etl.ps1  run_history_etl.sh  run_kickbase_auth_check.sh  run_kickbase_league_discovery.sh  run_ligainsider_scrape_check.sh  run_ml_bigquery_pipeline.sh  run_ml_scheduler.sh  run_pipeline_demo.sh  run_powerbi_desktop_pack.sh  run_private_ingestion.sh  run_scheduler.sh  start_db.ps1  start_db.sh  test.sh
scripts/analysis/: __init__.py  show_bronze_tables.py
sql/: V10__rename_image_source_url_to_local_path.sql  V11__normalize_team_uids_and_match_uids.sql  V12__dim_columns_and_season_retention.sql  V13__normalize_ligainsider_team_urls.sql  V1__init.sql  V2__add_season_label.sql  V3__add_match_context_fields.sql  V4__player_uid_and_raw_only.sql  V5__kb_ids_team_codes_and_compact_match_uid.sql  V6__raw_star_schema_with_image_blob.sql  V7__rename_kickbase_player_id_to_kb_player_id.sql  V8__rebuild_kickbase_raw_for_text_player_uid.sql  V9__team_uid_text_and_merge_prep.sql
src/: __init__.py  db.py  etl_history.py  features_engineering.py  kickbase_client.py  models.py  nn_models.py  preprocessing.py
tests/: test_backtesting.py  test_demo_ingestion.py  test_history_etl_parsers.py  test_kickbase_bronze_builder.py  test_ligainsider_bronze_builder.py  test_ligainsider_scraper.py  test_ml_champion_selection.py  test_ml_pipeline_scheduler.py  test_odds_bronze_builder.py  test_powerbi_api.py  test_powerbi_desktop_assets.py  test_prepare_ml_exports.py  test_prepare_raw_exports.py  test_private_ingestion.py  test_scheduler.py
(+57 files in other folders)
