# ------------------------------------
# pyproject.toml
#
# Projektdefinition fuer Packaging und Entwicklungswerkzeuge.
# Enthalten sind auch CLI-Einstiegspunkte fuer Ingestion und Scheduler.
#
# Usage
# ------------------------------------
# - python -m pip install -e .
# - kickbase-ingestion --mode demo
# ------------------------------------

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kickbase-analyzer"
version = "0.1.0"
description = "Private Kickbase analysis pipeline (demo + private modes)."
readme = "readme.md"
requires-python = ">=3.11"
authors = [
  { name = "Bastian Baumann" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.9.0",
  "mypy>=1.11.0"
]

[project.scripts]
kickbase-ingestion = "local_ingestion.runners.run_ingestion:main"
kickbase-ingestion-scheduler = "local_ingestion.runners.run_scheduler:main"
kickbase-bronze-ingest = "databricks.jobs.bronze_ingest.run_bronze_ingest:main"
kickbase-silver-sync = "databricks.jobs.silver_sync.run_silver_sync:main"
kickbase-gold-features = "databricks.jobs.gold_features.run_gold_features:main"
kickbase-build-marts = "bigquery.marts.build_marts_local:main"
kickbase-prepare-raw-exports = "bigquery.raw_load.prepare_raw_exports:main"
kickbase-bq-load-raw = "bigquery.raw_load.load_raw_with_bq_cli:main"
kickbase-bq-apply-views = "bigquery.core_transform.apply_views_with_bq_cli:main"

[tool.setuptools]
packages = [
  "databricks",
  "databricks.jobs",
  "databricks.jobs.bronze_ingest",
  "databricks.jobs.silver_sync",
  "databricks.jobs.gold_features",
  "bigquery",
  "bigquery.raw_load",
  "bigquery.core_transform",
  "bigquery.marts",
  "local_ingestion",
  "local_ingestion.core",
  "local_ingestion.runners",
  "local_ingestion.kickbase_client"
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
strict = true

[tool.ruff]
line-length = 100
target-version = "py311"
